# go-links

./: pyproject.toml
frontend/src/: actions.js
frontend/src/components/: Global.css  Navigation.jsx
frontend/src/config/: index.js
server/src/: main.py
server/src/modules/base/: authentication.py  handlers.py
server/src/modules/data/implementations/postgres/: users.py
server/src/shared_helpers/: config.py
