[tool.poetry]
name = "go-links"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
google_api_python_client = "1.6.4"
google_auth_httplib2 = "0.0.2"
gunicorn = "20.0.4"
jinja2 = "2.11.3"
oauth2client = "4.1.2"
oauthlib = "2.0.6"
psycopg2-binary = "2.8.6"
python-dateutil = "2.8.1"
requests = "2.22.0"
Flask = "1.1.2"
Flask-Migrate = "2.5.2"
Flask-Login = "0.5.0"
Flask-SQLAlchemy = "=2.4.1"
Flask-WTF = "0.14.3"
PyJWT = "1.7.1"
PyYAML = "5.4"
sentry-sdk = {version = "0.20.3", extras = ["flask"]}
validate-email = "1.3"
validators = "0.18.2"
markupsafe = "2.0.1"
itsdangerous = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
